--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     </head>
     <body>
     
-        <div class="upper">
-            <div class="side">
+        <div id="upper">
+            <div id="side">
 
             </div>
 
             <main>
-                <div class="nav">
+                <div id="upgrade-overlay">
 
                 </div>
                 <div class="screen-container">
-                    
+
                 </div>
             </main>
         </div>
