--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/style.css">
         <title>Spotify</title>
     </head>
@@ -14,7 +15,45 @@
     
         <div id="upper">
             <div id="side">
+                <!-- logo -->
+                <img src="img/logo.svg" id="logo">
 
+                <!-- main nav -->
+                <div id="main-nav">
+                    <div class="nav-element vertical-align" id="home">
+                        <span class="logo-size" id="home-logo">
+                            <i class="fa-solid fa-house"></i>
+                        </span>
+                        <span>Home</span>
+                    </div>
+                    <div class="nav-element vertical-align" id="search">
+                        <span class="logo-size" id="search-logo">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </span>
+                        <span>Search</span>
+                    </div>
+                    <div class="nav-element vertical-align" id="library">
+                        <span class="logo-size" id="library-logo">
+                            <i class="fa-solid fa-lines-leaning"></i>
+                        </span>
+                        <span>La tua libreria</span>
+                    </div>
+                </div>
+
+                <!-- new playlist -->
+                <div class="nav-element" id="new-playlist">
+
+                </div>
+
+                <!-- playlist names -->
+                <div class="nav-element" id="playlist-names">
+
+                </div>
+
+                <!-- download + profile -->
+                <div class="nav-element" id="bottom-nav">
+
+                </div>
             </div>
 
             <main>
