--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div id="main-nav">
                     <div class="nav-element vertical-align" id="home">
                         <span class="logo-size" id="home-logo">
-                            <i class="fa-solid fa-house"></i>
+                            <i class="fa-solid fa-house white"></i>
                         </span>
-                        <span>Home</span>
+                        <span class="white">Home</span>
                     </div>
                     <div class="nav-element vertical-align" id="search">
                         <span class="logo-size" id="search-logo">
@@ -42,12 +42,24 @@
 
                 <!-- new playlist -->
                 <div class="nav-element" id="new-playlist">
-
+                    <h3 class="white">PLAYLIST</h3>
+                    <div class="vertical-align" id="create-playlist">
+                        <span id="new-playlist-logo">
+                            <i class="fa-solid fa-square-plus"></i>
+                        </span>
+                        <span>Crea playlist</span>
+                    </div>
                 </div>
 
                 <!-- playlist names -->
                 <div class="nav-element" id="playlist-names">
-
+                    <p>Nome Playlist</p>
+                    <p>Nome Playlist</p>
+                    <p>Nome Playlist</p>
+                    <p>Nome Playlist</p>
+                    <p>Nome Playlist</p>
+                    <p>Nome Playlist</p>
+                    <p>Nome Playlist</p>
                 </div>
 
                 <!-- download + profile -->
