--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </head>
     <body>
     
+        <!-- UPPER -->
         <div id="upper">
+
+            <!-- Side -->
             <div id="side">
                 <!-- logo -->
                 <img src="img/logo.svg" id="logo">
@@ -64,10 +67,21 @@
 
                 <!-- download + profile -->
                 <div class="nav-element" id="bottom-nav">
-
+                    <div id="download">
+                        <i class="fa-solid fa-circle-down"></i>
+                        <span>Installa app</span>
+                    </div>
+                    <hr>
+                    <div class="vertical-align" id="profile">
+                        <img src="img/profile.svg" id="profile-picture">
+                        <p class="white" id="profile-name">Jhon Doe</p>
+                    </div>
                 </div>
             </div>
 
+
+
+            <!-- Main -->
             <main>
                 <div id="upgrade-overlay">
                     <span class="upgrade-button white">EFFETTUA L'UPGRADE</span>
