--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
         <!-- FOOTER -->
         <footer>
 
+            <!-- left footer -->
+            <div id="left-footer">
+                <div id="song">
+                    <img src="img/sinister.jpeg" id="cover">
+                    <div id="song-infos">
+                        <p class="white" id="song-name">Sinister</p>
+                        <p id="artist">Brano Nome</p>
+                    </div>
+                </div>
+                <div id="song-buttons">
+                    <i id="heart" class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+
+            <!-- player -->
+            <div id="player">
+
+            </div>
+
+            <!-- right footer -->
+            <div id="right-footer">
+
+            </div>
         </footer>
     </body>
 </html>
