--- a/index.html
+++ b/index.html
@@ -113,7 +113,27 @@
 
             <!-- player -->
             <div id="player">
+                <!-- upper player -->
+                <div id="upper-plyer">
+                    <i id="shuffle-button" class="fa-solid fa-shuffle white"></i>
+                    <i id="backward-button" class="fa-solid fa-backward-step white"></i>
+                    <i id="play-button" class="fa-regular fa-circle-play white"></i>
+                    <i id="forward-button" class="fa-solid fa-forward-step white"></i>
+                    <i id="repeat-button" class="fa-solid fa-rotate-right white"></i>
+                </div>
 
+                <!-- bottom player -->
+                <div id="bottom-player">
+                    <div id="song-time">
+                        <p class="timer white">0:25</p>
+                    </div>
+                    <div id="grey-player-bar">
+                        <div id="white-player-bar"></div>
+                    </div>
+                    <div id="song-total-time">
+                        <p class="timer white">4:35</p>
+                    </div>
+                </div>
             </div>
 
             <!-- right footer -->
