--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     <div id="song-time">
                         <p class="timer white">0:25</p>
                     </div>
-                    <div id="grey-player-bar">
-                        <div id="white-player-bar"></div>
+                    <div class="grey-bar" id="full-song">
+                        <div class="white-bar" id="actual-part"></div>
                     </div>
                     <div id="song-total-time">
                         <p class="timer white">4:35</p>
@@ -138,7 +138,12 @@
 
             <!-- right footer -->
             <div id="right-footer">
-
+                <i class="fa-solid fa-list white"></i>
+                <i class="fa-solid fa-display white"></i>
+                <i class="fa-solid fa-volume-high white"></i>
+                <div class="grey-bar" id="volume">
+                    <div class="white-bar" id="actual-volume"></div>
+                </div>
             </div>
         </footer>
     </body>
