--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="img/logo.svg" id="logo">
 
                 <!-- main nav -->
-                <div id="main-nav">
+                <div id="side-nav">
                     <div class="nav-element vertical-align" id="home">
                         <span class="logo-size" id="home-logo">
                             <i class="fa-solid fa-house white"></i>
@@ -83,11 +83,25 @@
 
             <!-- Main -->
             <main>
+                <!-- upgrade overlay -->
                 <div id="upgrade-overlay">
                     <span class="upgrade-button white">EFFETTUA L'UPGRADE</span>
                 </div>
-                <div class="screen-container">
 
+                <!-- screen container -->
+                <div id="screen-container">
+                    <!-- main nav -->
+                    <div id="main-nav">
+                        <div id="in-evidence">
+                            <p>IN EVIDENZA</p>
+                            <hr>
+                        </div>
+                        <p>PODCAST</p>
+                        <p>CLASSIFICHE</p>
+                        <p>GENERI E MOOD</p>
+                        <p>NUOVE USCITE</p>
+                        <p>SCOPRI</p>
+                    </div>
                 </div>
             </main>
         </div>
