main work in progress

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <!-- screen container -->
                 <div id="screen-container">
                     <!-- main nav -->
-                    <div id="main-nav">
+                    <section id="main-nav">
                         <div id="in-evidence">
                             <p>IN EVIDENZA</p>
                             <hr>
@@ -101,7 +101,54 @@
                         <p>GENERI E MOOD</p>
                         <p>NUOVE USCITE</p>
                         <p>SCOPRI</p>
-                    </div>
+                    </section>
+
+                    <!-- Recently Played -->
+                    <section id="recently-played">
+                        <h2 class="white">Recently played</h2>
+                        <div id="container-recently-played">
+                            <div class="cover-container" id="heavy-metal">
+                                <img src="img/metal_lifting.jpg" class="cover-img">
+                                <p class="white song-name">Heavy Metal</p>
+                                <p>Subtitle</p>
+                            </div>
+                            <div class="cover-container" id="stranger-thigs">
+                                <img src="img/stranger.jpeg" class="cover-img">
+                                <p class="white song-name">Stranger Things, Vol. 1 (a Netlix Original Series Soundtrack)</p>
+                                <p>Kyle Dixon</p>
+                            </div>
+                            <div class="cover-container" id="quiet-place">
+                                <img src="img/aquietplace.jpeg" class="cover-img">
+                                <p class="white song-name">A quiet place</p>
+                                <p>Subtitle</p>
+                            </div>
+                            <div class="cover-container" id="split">
+                                <img src="img/split.jpeg" class="cover-img">
+                                <p class="white song-name">Split</p>
+                                <p>Subtitle</p>
+                            </div>
+                            <div class="cover-container" id="wellness">
+                                <img src="img/cure.jpeg" class="cover-img">
+                                <p class="white song-name">A cure for wellness</p>
+                                <p>Subtitle</p>
+                            </div>
+                            <div class="cover-container" id="sinister">
+                                <img src="img/sinister.jpeg" class="cover-img">
+                                <p class="white song-name">Sinister</p>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- Created for You -->
+                    <section id="for-you">
+                        
+                    </section>
+
+                    <!-- Popular Artists -->
+                    <section id="popular-artists">
+                        
+                    </section>
                 </div>
             </main>
         </div>
