--- a/index.html
+++ b/index.html
@@ -142,7 +142,18 @@
 
                     <!-- Created for You -->
                     <section id="for-you">
-                        
+                        <h2 class="white">Creato per Jhon Doe</h2>
+                        <p class="info">Più ascolti, più saranno i suggerimenti<p>
+                        <div id="container-for-you">    
+                            <div class="cover-container" id="release-radar">
+                                <img src="img/radar.jpeg" class="cover-img">
+                                <p class="white song-name">Release Radar</p>
+                            </div>
+                            <div class="cover-container" id="daily-mix">
+                                <img src="img/mixdaily.jpeg" class="cover-img">
+                                <p class="white song-name">Daily Mix</p>
+                            </div>
+                        </div>     
                     </section>
 
                     <!-- Popular Artists -->
