grafica finita (no fix nav left)

--- a/index.html
+++ b/index.html
@@ -158,7 +158,18 @@
 
                     <!-- Popular Artists -->
                     <section id="popular-artists">
-                        
+                        <h2 class="white">Artisti più popolari</h2>
+                        <p class="info">Più ascolti, più saranno i suggerimenti<p>
+                        <div id="container-popular-artists">    
+                            <div class="cover-container" id="release-radar">
+                                <img src="img/youg.jpeg" class="cover-img round-img">
+                                <p class="white song-name">Lana del Rey</p>
+                            </div>
+                            <div class="cover-container" id="daily-mix">
+                                <img src="img/einaudi.jpeg" class="cover-img round-img">
+                                <p class="white song-name">Ludovico Einaudi</p>
+                            </div>
+                        </div> 
                     </section>
                 </div>
             </main>
